fixes all modifiers

--- a/source/index.html
+++ b/source/index.html
@@ -26,33 +26,33 @@
           <span class="menu__line"></span>
           <span class="menu__line"></span>
         </button>
-        <ul class="menu__list menu__list-catalog-order">
+        <ul class="menu__list menu__list--catalog-order">
           <li class="menu__item">
-            <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a>
+            <a class="menu__link menu__link--catalog" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a>
+            <a class="menu__link menu__link--order" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-search">
+        <ul class="menu__list menu__list--search">
           <li class="menu__item search">
             <a class="menu__link search__link" href="#">Поиск по сайту</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+            <a class="menu__link menu__link--basket" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-new">
+        <ul class="menu__list menu__list--new">
           <li class="menu__item">
-            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+            <a class="menu__link menu__link--new" href="#">Новые поступления</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-new" href="#">Распродажа</a>
+            <a class="menu__link menu__link--new" href="#">Распродажа</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-delivery">
+        <ul class="menu__list menu__list--delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
+            <a class="menu__link menu__link--delivery">Бесплатная доставка по России</a>
           </li>
         </ul>
       </nav>
@@ -68,20 +68,20 @@
     <!-- Секция ручной работы -->
     <section class="handwork">
       <div class="handwork__title">
-        <p class="handwork__text">Милые штуки ручной <br class="handwork__title-br"> работы для дома</p>
+        <p class="handwork__text">Милые штуки ручной <br class="handwork__title--br"> работы для дома</p>
       </div>
       <div class="handwork__goods">
         <a href="catalog.html" class="handwork__interior">
-          <div class="handwork__inner handwork__flex-g">
+          <div class="handwork__inner handwork__flex--g">
             <p class="handwork__category">Предметы интерьера</p>
-            <img class="handwork__image-itn handwork__image-active" src="http://placecorgi.com/150" width="40"
+            <img class="handwork__image-itn handwork__image--active" src="http://placecorgi.com/150" width="40"
               height="62" alt="Предметы интерьера">
           </div>
         </a>
         <a href="catalog.html" class="handwork__toys">
-          <div class="handwork__inner handwork__flex-g">
+          <div class="handwork__inner handwork__flex--g">
             <p class="handwork__category">Детские игрушки</p>
-            <img class="handwork__image-toys handwork__image-active" src="http://placecorgi.com/150"
+            <img class="handwork__image-toys handwork__image--active" src="http://placecorgi.com/150"
               width="60" height="60" alt="Детские игрушки">
           </div>
         </a>
@@ -146,32 +146,32 @@
         <div class="about-us__wrapper">
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
-            <li class="about-us__item about-us__item-eco">
+            <li class="about-us__item about-us__item--eco">
               <img class="about-us__image" src="http://placecorgi.com/150" width="32" height="37"
                 alt="Экологически чистые материалы">
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
-            <li class="about-us__item about-us__item-scandinavian">
+            <li class="about-us__item about-us__item--scandinavian">
               <img class="about-us__image" src="http://placecorgi.com/150" width="47" height="27"
                 alt="Скандинавский стиль по российской цене">
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
-            <li class="about-us__item about-us__item-likes">
+            <li class="about-us__item about-us__item--likes">
               <img class="about-us__image" src="http://placecorgi.com/150" width="34" height="27"
                 alt="Увеличивает лайкина фотографиях">
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
-            <li class="about-us__item about-us__item-love">
+            <li class="about-us__item about-us__item--love">
               <img class="about-us__image" src="http://placecorgi.com/150" width="35" height="34"
                 alt="Связано вручную с любовью и умилением">
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
-            <li class="about-us__item about-us__item-support">
+            <li class="about-us__item about-us__item--support">
               <img class="about-us__image" src="http://placecorgi.com/150" width="55" height="23"
                 alt="Поддержка отечественного производителя">
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
-            <li class="about-us__item about-us__item-present">
+            <li class="about-us__item about-us__item--present">
               <img class="about-us__image" src="http://placecorgi.com/150" width="33" height="32"
                 alt="Поставляется в подарочной упаковке">
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
@@ -218,7 +218,7 @@
             <div class="contacts__email">
               <p class="contacts__value">e-mail:</p>
               <a href="mailto:info@mimimishkashop.ru"
-                class="contacts__field contacts__field-line">info@mimimishkashop.ru</a>
+                class="contacts__field contacts__field--line">info@mimimishkashop.ru</a>
             </div>
             <div class="contacts__address">
               <p class="contacts__value">адрес:</p>
@@ -254,17 +254,17 @@
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
+            <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм">
               <img src="http://placecorgi.com/150" alt="Наш инстаграм" width="22" height="21">
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
+            <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук">
               <img src="http://placecorgi.com/150" alt="Наш фейсбук" width="15" height="28">
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
+            <a class="social__link social__link--twitter" href="#" aria-label="Твитер">
               <img src="http://placecorgi.com/150" alt="Наш твиттер" width="23" height="20">
             </a>
           </li>
