--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,33 +26,33 @@
           <span class="menu__line"></span>
           <span class="menu__line"></span>
         </button>
-        <ul class="menu__list menu__list-catalog-order">
+        <ul class="menu__list menu__list--catalog-order">
           <li class="menu__item">
-            <a class="menu__link menu__link-catalog">Каталог товаров</a>
+            <a class="menu__link menu__link--catalog">Каталог товаров</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-order" href="form.html">Вязание на заказ</a>
+            <a class="menu__link menu__link--order" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-search">
+        <ul class="menu__list menu__list--search">
           <li class="menu__item search">
             <a class="menu__link search__link" href="#">Поиск по сайту</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+            <a class="menu__link menu__link--basket" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-new">
+        <ul class="menu__list menu__list--new">
           <li class="menu__item">
-            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+            <a class="menu__link menu__link--new" href="#">Новые поступления</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-new" href="#">Распродажа</a>
+            <a class="menu__link menu__link--new" href="#">Распродажа</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-delivery">
+        <ul class="menu__list menu__list--delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
+            <a class="menu__link menu__link--delivery">Бесплатная доставка по России</a>
           </li>
         </ul>
       </nav>
@@ -116,8 +116,8 @@
                 alt="Большая корзина для игрушек">
               <div class="catalog__shadow">
                 <div class="catalog__desc">
-                  <p class="catalog__title catalog__title-basket">Большая корзинка для игрушек</p>
-                  <p class="catalog__text catalog__text-basket">Диаметр 30 см, высота 30 см</p>
+                  <p class="catalog__title catalog__title--basket">Большая корзинка для игрушек</p>
+                  <p class="catalog__text catalog__text--basket">Диаметр 30 см, высота 30 см</p>
                   <div class="catalog__price">
                     <p class="catalog__money">1 500 руб.</p>
                     <img id="modal-add" src="http://placecorgi.com/150" width="20" height="19"
@@ -127,17 +127,17 @@
               </div>
             </a>
           </li>
-          <li class="catalog__item catalog__item-video">
+          <li class="catalog__item catalog__item--video">
             <div class="catalog__process">
               <img class="catalog__img" src="http://placecorgi.com/150" width="32" height="22"
                 alt="процес производства">
-              <p class="catalog__title catalog__title-process">Процесс производства</p>
+              <p class="catalog__title catalog__title--process">Процесс производства</p>
             </div>
             <img class="catalog__video" src="img/video-mobile@1x.jpg"
               srcset="img/video-mobile@1x.jpg 767w, img/video-tablet@1x.jpg 1149w, img/video-desktop@1x.jpg" width="260"
               height="150" alt="Процесс производства">
             <div class="catalog__process-wrapper">
-              <p class="catalog__text catalog__text-process">
+              <p class="catalog__text catalog__text--process">
                 По просьбам наших любимых фолловеров мы сняли
                 для вас подробное видео о том, как появляются наши товары.
               </p>
