--- a/source/form.html
+++ b/source/form.html
@@ -26,33 +26,33 @@
           <span class="menu__line"></span>
           <span class="menu__line"></span>
         </button>
-        <ul class="menu__list menu__list-catalog-order">
+        <ul class="menu__list menu__list--catalog-order">
           <li class="menu__item">
-            <a class="menu__link menu__link-catalog" href="catalog.html">Каталог товаров</a>
+            <a class="menu__link menu__link--catalog" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-order">Вязание на заказ</a>
+            <a class="menu__link menu__link--order">Вязание на заказ</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-search">
+        <ul class="menu__list menu__list--search">
           <li class="menu__item search">
             <a class="menu__link search__link" href="#">Поиск по сайту</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-basket" href="#">Корзина: пока пуста</a>
+            <a class="menu__link menu__link--basket" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-new">
+        <ul class="menu__list menu__list--new">
           <li class="menu__item">
-            <a class="menu__link menu__link-new" href="#">Новые поступления</a>
+            <a class="menu__link menu__link--new" href="#">Новые поступления</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link menu__link-new" href="#">Распродажа</a>
+            <a class="menu__link menu__link--new" href="#">Распродажа</a>
           </li>
         </ul>
-        <ul class="menu__list menu__list-delivery">
+        <ul class="menu__list menu__list--delivery">
           <li class="menu__item">
-            <a class="menu__link menu__link-delivery">Бесплатная доставка по России</a>
+            <a class="menu__link menu__link--delivery">Бесплатная доставка по России</a>
           </li>
         </ul>
       </nav>
@@ -78,47 +78,47 @@
         </p>
       </div>
       <form action="https://echo.htmlacademy.ru">
-        <div class="form__fieldset form__fieldset-type">
+        <div class="form__fieldset form__fieldset--type">
           <div class="form__inner">
-            <p class="form__legend form__legend-line">Тип</p>
+            <p class="form__legend form__legend--line">Тип</p>
             <div class="form__radio">
               <div class="form__interior">
                 <input class="visually-hidden" id="interior" type="radio" name="type" value="interior" checked>
-                <label class="form__style-text form__radio-indentation" for="interior">
+                <label class="form__style-text form__radio--indentation" for="interior">
                   Аксессуар для интерьера
                 </label>
               </div>
               <div class="form__games">
                 <input class="visually-hidden" id="games" type="radio" name="type" value="games">
-                <label class="form__style-text form__radio-indentation" for="games">
+                <label class="form__style-text form__radio--indentation" for="games">
                   Детская игрушка
                 </label>
               </div>
             </div>
           </div>
         </div>
-        <div class="form__fieldset form__fieldset-checkboxes">
+        <div class="form__fieldset form__fieldset--checkboxes">
           <div class="form__inner">
             <p class="form__legend form__legend-line">Цвет</p>
             <div class="form__checkboxes">
               <input class="visually-hidden" id="white" name="color" value="white" type="checkbox" checked>
-              <label class="form__style-text form__checkbox-indentation" for="white">Белый</label>
+              <label class="form__style-text form__checkbox--indentation" for="white">Белый</label>
               <input class="visually-hidden" id="gray" name="color" value="grey" type="checkbox" checked>
-              <label class="form__style-text form__checkbox-indentation" for="gray">Серый</label>
+              <label class="form__style-text form__checkbox--indentation" for="gray">Серый</label>
               <input class="visually-hidden" id="tiffany" name="color" value="tiffany" type="checkbox">
-              <label class="form__style-text form__checkbox-indentation" for="tiffany">«Тиффани»</label>
+              <label class="form__style-text form__checkbox--indentation" for="tiffany">«Тиффани»</label>
               <input class="visually-hidden" id="black" name="color" value="black" type="checkbox">
-              <label class="form__style-text form__checkbox-indentation" for="black">Черный</label>
+              <label class="form__style-text form__checkbox--indentation" for="black">Черный</label>
               <input class="visually-hidden" id="pink" name="color" value="pink" type="checkbox">
-              <label class="form__style-text form__checkbox-indentation" for="pink">Розовый</label>
+              <label class="form__style-text form__checkbox--indentation" for="pink">Розовый</label>
               <input class="visually-hidden" id="orange" name="color" value="orange" type="checkbox">
-              <label class="form__style-text form__checkbox-indentation" for="orange">Оранжевый</label>
+              <label class="form__style-text form__checkbox--indentation" for="orange">Оранжевый</label>
             </div>
           </div>
         </div>
-        <div class="form__fieldset form__fieldset-names">
+        <div class="form__fieldset form__fieldset--names">
           <div class="form__inner">
-            <p class="form__legend form__legend-names form__legend-line">Фио</p>
+            <p class="form__legend form__legend--names form__legend--line">Фио</p>
             <div class="form__names">
               <div class="form__first-name">
                 <label class="form__style-text form__text-mb" for="first-name">Имя:</label>
@@ -126,43 +126,43 @@
               </div>
               <div class="form__last-name">
                 <label class="form__style-text form__text-mb" for="last-name">Фамилия:</label>
-                <input class="form__placeholder form__placeholder-last-name" id="last-name" type="text"
+                <input class="form__placeholder form__placeholder--last-name" id="last-name" type="text"
                   placeholder="Укажите фамилию*">
               </div>
               <div class="form__father-name">
                 <label class="form__style-text form__text-mb" for="father-name">Отчество:</label>
-                <input class="form__placeholder form__placeholder-father-name" id="father-name" type="text"
+                <input class="form__placeholder form__placeholder--father-name" id="father-name" type="text"
                   placeholder="Отчество, если желаете">
               </div>
             </div>
           </div>
         </div>
-        <div class="form__fieldset form__fieldset-email">
-          <div class="form__inner form__inner-column">
+        <div class="form__fieldset form__fieldset--email">
+          <div class="form__inner form__inner--column">
             <div class="form__wrapper-phone">
-              <p class="form__legend form__legend-phone form__legend-line">Тел</p>
+              <p class="form__legend form__legend--phone form__legend--line">Тел</p>
               <label for="number-phone"></label>
-              <input class="form__placeholder form__placeholder-tel" id="number-phone" type="tel"
+              <input class="form__placeholder form__placeholder--tel" id="number-phone" type="tel"
                 pattern="2[0-9]{3}-[0-9]{3}" placeholder="+7 XXX XXX XX XX*" required>
             </div>
             <div class="form__wrapper-email">
-              <p class="form__legend form__legend-email form__legend-line">Email</p>
+              <p class="form__legend form__legend--email form__legend--line">Email</p>
               <label for="email"></label>
-              <input class="form__placeholder form__placeholder-email" id="email" type="email" placeholder="Ваш Email*"
+              <input class="form__placeholder form__placeholder--email" id="email" type="email" placeholder="Ваш Email*"
                 required>
             </div>
           </div>
         </div>
-        <div class="form__fieldset form__fieldset-additionally">
+        <div class="form__fieldset form__fieldset--additionally">
           <div class="form__inner">
-            <p class="form__legend form__legend-additionally form__legend-line">Доп</p>
+            <p class="form__legend form__legend--additionally form__legend--line">Доп</p>
             <label class="form__textarea">
               <textarea class="form__textarea-text" name="form-text" id="form-text"
                 placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </label>
           </div>
         </div>
-        <div class="form__inner form__inner-required">
+        <div class="form__inner form__inner--required">
           <small class="form__require"><sup>*</sup>Поля обязательны для заполнения</small>
           <button class="form__btn button" type="submit">Отправить заказ</button>
         </div>
@@ -180,15 +180,15 @@
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link-instagram" href="#" aria-label="Инстаграм">
+            <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм">
               <img src="http://placecorgi.com/150" alt="Наш инстаграм" width="22" height="21"></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link-facebook" href="#" aria-label="Фейсбук">
+            <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук">
               <img src="http://placecorgi.com/150" alt="Наш фейсбук" width="15" height="28"></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link-twitter" href="#" aria-label="Твитер">
+            <a class="social__link social__link--twitter" href="#" aria-label="Твитер">
               <img src="http://placecorgi.com/150" alt="Наш твиттер" width="23" height="20"></a>
           </li>
         </ul>
