--- a/source/index.html
+++ b/source/index.html
@@ -147,32 +147,32 @@
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
             <li class="about-us__item about-us__item--eco">
-              <img class="about-us__image" src="http://placecorgi.com/150" width="32" height="37"
+              <img class="about-us__image about-us__image--eco" src="http://placecorgi.com/150" width="32" height="37"
                 alt="Экологически чистые материалы">
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item about-us__item--scandinavian">
-              <img class="about-us__image" src="http://placecorgi.com/150" width="47" height="27"
+              <img class="about-us__image about-us__image--scandinavian" src="http://placecorgi.com/150" width="47" height="27"
                 alt="Скандинавский стиль по российской цене">
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item about-us__item--likes">
-              <img class="about-us__image" src="http://placecorgi.com/150" width="34" height="27"
+              <img class="about-us__image about-us__image--likes" src="http://placecorgi.com/150" width="34" height="27"
                 alt="Увеличивает лайкина фотографиях">
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item about-us__item--love">
-              <img class="about-us__image" src="http://placecorgi.com/150" width="35" height="34"
+              <img class="about-us__image about-us__image--love" src="http://placecorgi.com/150" width="35" height="34"
                 alt="Связано вручную с любовью и умилением">
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item about-us__item--support">
-              <img class="about-us__image" src="http://placecorgi.com/150" width="55" height="23"
+              <img class="about-us__image about-us__image--support" src="http://placecorgi.com/150" width="55" height="23"
                 alt="Поддержка отечественного производителя">
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item about-us__item--present">
-              <img class="about-us__image" src="http://placecorgi.com/150" width="33" height="32"
+              <img class="about-us__image about-us__image--present" src="http://placecorgi.com/150" width="33" height="32"
                 alt="Поставляется в подарочной упаковке">
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
             </li>
