fixes modal window

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -84,7 +84,7 @@
                   <p class="catalog__text">Рост 30 см, вес 200 г</p>
                   <div class="catalog__price">
                     <p class="catalog__money">1 200 руб.</p>
-                    <img id="modal-add" src="http://placecorgi.com/150" width="20" height="19"
+                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19"
                       alt="Иконка корзины">
                   </div>
                 </div>
@@ -102,7 +102,7 @@
                   <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
                   <div class="catalog__price">
                     <p class="catalog__money">690 руб.</p>
-                    <img id="modal-add" src="http://placecorgi.com/150" width="20" height="19"
+                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19"
                       alt="Иконка корзины">
                   </div>
                 </div>
@@ -120,7 +120,7 @@
                   <p class="catalog__text catalog__text--basket">Диаметр 30 см, высота 30 см</p>
                   <div class="catalog__price">
                     <p class="catalog__money">1 500 руб.</p>
-                    <img id="modal-add" src="http://placecorgi.com/150" width="20" height="19"
+                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19"
                       alt="Иконка корзины">
                   </div>
                 </div>
@@ -141,7 +141,7 @@
                 По просьбам наших любимых фолловеров мы сняли
                 для вас подробное видео о том, как появляются наши товары.
               </p>
-              <button class="catalog__btn button" id="modal-add" type="button">Сделать заказ</button>
+              <button class="catalog__btn button modal-add" type="button">Сделать заказ</button>
             </div>
           </li>
         </ul>
@@ -184,7 +184,7 @@
   </footer>
 
   <!-- Секция модального окна -->
-  <section class="modal">
+  <section class="modal" id="modal">
     <div class="modal__content">
       <div class="modal__inner">
         <p class="modal__title">Добавить в корзину</p>
@@ -206,7 +206,6 @@
 
   <script src="js/menu.js"></script>
   <script src="js/modal.js"></script>
-  <script src="js/write-us.js"></script>
 
 </body>
 
