--- a/source/index.html
+++ b/source/index.html
@@ -133,7 +133,7 @@
               alt="Вязаные корзинки">
             <div class="baskets__order">
               <p class="baskets__price">Цена: 990 руб.</p>
-              <button class="baskets__to-order-btn button" id="modal-add" type="button">Заказать</button>
+              <button class="baskets__to-order-btn button modal-add" type="button">Заказать</button>
             </div>
           </div>
         </div>
@@ -305,7 +305,7 @@
   <script src="js/menu.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/map.js"></script>
-  <script src=https://api-maps.yandex.ru/2.1/?lang=ru_RU> </script> <script src="js/write-us.js"></script>
+  <script src=https://api-maps.yandex.ru/2.1/?lang=ru_RU> </script>
 
 </body>
 
