--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,7 @@
   <!-- Шапка сайта -->
   <header class="header">
     <div class="header__inner">
-      <nav class="header__menu menu menu__closed menu__no-js">
+      <nav class="header__menu menu menu__no-js">
         <a class="header__logo logo" href="index.html">
           <img class="logo__image" src="img/logo-mobile.svg"
             srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
