--- a/source/catalog.html
+++ b/source/catalog.html
@@ -84,8 +84,7 @@
                   <p class="catalog__text">Рост 30 см, вес 200 г</p>
                   <div class="catalog__price">
                     <p class="catalog__money">1 200 руб.</p>
-                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19"
-                      alt="Иконка корзины">
+                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19" alt="Иконка корзины">
                   </div>
                 </div>
               </div>
@@ -102,8 +101,7 @@
                   <p class="catalog__text">Диаметр 15 см, высота 10 см</p>
                   <div class="catalog__price">
                     <p class="catalog__money">690 руб.</p>
-                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19"
-                      alt="Иконка корзины">
+                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19" alt="Иконка корзины">
                   </div>
                 </div>
               </div>
@@ -120,8 +118,7 @@
                   <p class="catalog__text catalog__text--basket">Диаметр 30 см, высота 30 см</p>
                   <div class="catalog__price">
                     <p class="catalog__money">1 500 руб.</p>
-                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19"
-                      alt="Иконка корзины">
+                    <img class="modal-add" src="http://placecorgi.com/150" width="20" height="19" alt="Иконка корзины">
                   </div>
                 </div>
               </div>
@@ -176,8 +173,7 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34"
-            alt="HTML Academy">
+          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
