--- a/source/form.html
+++ b/source/form.html
@@ -197,8 +197,7 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34"
-            alt="HTML Academy">
+          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
