--- a/source/index.html
+++ b/source/index.html
@@ -81,8 +81,8 @@
         <a href="catalog.html" class="handwork__toys">
           <div class="handwork__inner handwork__flex--g">
             <p class="handwork__category">Детские игрушки</p>
-            <img class="handwork__image-toys handwork__image--active" src="http://placecorgi.com/150"
-              width="60" height="60" alt="Детские игрушки">
+            <img class="handwork__image-toys handwork__image--active" src="http://placecorgi.com/150" width="60"
+              height="60" alt="Детские игрушки">
           </div>
         </a>
       </div>
@@ -152,8 +152,8 @@
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item about-us__item--scandinavian">
-              <img class="about-us__image about-us__image--scandinavian" src="http://placecorgi.com/150" width="47" height="27"
-                alt="Скандинавский стиль по российской цене">
+              <img class="about-us__image about-us__image--scandinavian" src="http://placecorgi.com/150" width="47"
+                height="27" alt="Скандинавский стиль по российской цене">
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item about-us__item--likes">
@@ -167,13 +167,13 @@
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item about-us__item--support">
-              <img class="about-us__image about-us__image--support" src="http://placecorgi.com/150" width="55" height="23"
-                alt="Поддержка отечественного производителя">
+              <img class="about-us__image about-us__image--support" src="http://placecorgi.com/150" width="55"
+                height="23" alt="Поддержка отечественного производителя">
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item about-us__item--present">
-              <img class="about-us__image about-us__image--present" src="http://placecorgi.com/150" width="33" height="32"
-                alt="Поставляется в подарочной упаковке">
+              <img class="about-us__image about-us__image--present" src="http://placecorgi.com/150" width="33"
+                height="32" alt="Поставляется в подарочной упаковке">
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
             </li>
           </ul>
@@ -274,8 +274,7 @@
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34"
-            alt="HTML Academy">
+          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34" alt="HTML Academy">
         </a>
       </div>
     </div>
@@ -305,8 +304,4 @@
   <script src="js/menu.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/map.js"></script>
-  <script src=https://api-maps.yandex.ru/2.1/?lang=ru_RU> </script>
-
-</body>
-
-</html>
+  <script src=https://api-maps.yandex.ru/2.1/?lang=ru_RU> </script> </body> </html>
