--- a/source/index.html
+++ b/source/index.html
@@ -301,7 +301,11 @@
     </div>
   </section>
 
+  <!-- Скрипты -->
   <script src="js/menu.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/map.js"></script>
-  <script src=https://api-maps.yandex.ru/2.1/?lang=ru_RU> </script> </body> </html>
+  <script src=https://api-maps.yandex.ru/2.1/?lang=ru_RU></script> 
+
+</body> 
+</html>
