--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,8 +18,11 @@
     <div class="header__inner">
       <nav class="header__menu menu menu__no-js">
         <a class="header__logo logo" href="index.html">
-          <img class="logo__image" src="img/logo-mobile.svg"
-            srcset="img/logo-mobile.svg 767w, img/logo-tablet.svg 1149w, img/logo-desktop.svg" alt="Логотип">
+          <picture class="logo__picture">
+            <source media="(min-width: 1150px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="logo__image" width="" src="img/logo-mobile.svg" alt="Мишка">
+          </picture>
         </a>
         <button class="menu__btn" type="button" aria-label="Открыть меню">
           <span class="menu__line"></span>
@@ -172,8 +175,11 @@
       <hr class="footer__line line">
       <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="footer__image" src="http://placecorgi.com/150" width="27" height="34" alt="HTML Academy">
+        <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
+            <path fill="#63d1bb"
+              d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1 10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z" />
+            </svg>
         </a>
       </div>
     </div>
@@ -203,6 +209,7 @@
   <!-- Скрипты -->
   <script src="js/menu.js"></script>
   <script src="js/modal.js"></script>
+  <script src="picturefill.js" async></script>
 
 </body>
 
