--- a/source/form.html
+++ b/source/form.html
@@ -184,26 +184,29 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--instagram" href="#" aria-label="Инстаграм">
-              <img src="http://placecorgi.com/150" alt="Наш инстаграм" width="22" height="21"></a>
+              <img src="http://placecorgi.com/150" alt="Наш инстаграм" width="22" height="21">
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#" aria-label="Фейсбук">
-              <img src="http://placecorgi.com/150" alt="Наш фейсбук" width="15" height="28"></a>
+              <img src="http://placecorgi.com/150" alt="Наш фейсбук" width="15" height="28">
+            </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#" aria-label="Твитер">
-              <img src="http://placecorgi.com/150" alt="Наш твиттер" width="23" height="20"></a>
+              <img src="http://placecorgi.com/150" alt="Наш твиттер" width="23" height="20">
+            </a>
           </li>
         </ul>
       </div>
       <hr class="footer__line line">
-      <div class="footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
+      <div class="footer__copyright">
+        <b class="footer__copyright-text">Разработано</b>
         <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
+          <svg class="footer__academy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
             <path fill="#63d1bb"
               d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1 10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z" />
-            </svg>
+          </svg>
         </a>
       </div>
     </div>
