--- a/source/index.html
+++ b/source/index.html
@@ -131,9 +131,11 @@
                 </tr>
               </table>
             </div>
-            <img class="baskets__image" src="img/triple-set-mobile@1x.jpg"
-              srcset="img/triple-set-mobile@1x.jpg 767w, img/triple-set-tablet@1x.jpg 1149w, img/triple-set-desktop@1x.jpg"
-              alt="Вязаные корзинки">
+            <picture >
+              <source media="(min-width: 1150px)" srcset="img/triple-set-desktop@1x.jpg 1x, img/triple-set-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/triple-set-tablet@1x.jpg 1x, img/triple-set-tablet@2x.jpg 2x">
+                <img class="baskets__image" src="img/triple-set-mobile@1x.jpg" srcset="img/triple-set-mobile@2x.jpg 2x" alt="Вязаные корзинки">
+            </picture>
             <div class="baskets__order">
               <p class="baskets__price">Цена: 990 руб.</p>
               <button class="baskets__to-order-btn button modal-add" type="button">Заказать</button>
@@ -150,33 +152,39 @@
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
             <li class="about-us__item about-us__item--eco">
-              <img class="about-us__image about-us__image--eco" src="http://placecorgi.com/150" width="32" height="37"
-                alt="Экологически чистые материалы">
+              <svg class="about__us-icon-flower" width="32" height="37">
+                <use xlink:href="img/sprite.svg#icon-flower" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+              </svg>
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item about-us__item--scandinavian">
-              <img class="about-us__image about-us__image--scandinavian" src="http://placecorgi.com/150" width="47"
-                height="27" alt="Скандинавский стиль по российской цене">
+              <svg class="about__us-icon-money" width="47" height="27">
+                <use xlink:href="img/sprite.svg#icon-money" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+              </svg>
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item about-us__item--likes">
-              <img class="about-us__image about-us__image--likes" src="http://placecorgi.com/150" width="34" height="27"
-                alt="Увеличивает лайкина фотографиях">
+              <svg class="about__us-icon-heart" width="34" height="27">
+                <use xlink:href="img/sprite.svg#icon-heart" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+              </svg>
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item about-us__item--love">
-              <img class="about-us__image about-us__image--love" src="http://placecorgi.com/150" width="35" height="34"
-                alt="Связано вручную с любовью и умилением">
+              <svg class="about__us-icon-ball" width="35" height="34">
+                <use xlink:href="img/sprite.svg#icon-ball" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+              </svg>
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item about-us__item--support">
-              <img class="about-us__image about-us__image--support" src="http://placecorgi.com/150" width="55"
-                height="23" alt="Поддержка отечественного производителя">
+              <svg class="about__us-icon-rocket" width="55" height="23">
+                <use xlink:href="img/sprite.svg#icon-rocket" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+              </svg>
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item about-us__item--present">
-              <img class="about-us__image about-us__image--present" src="http://placecorgi.com/150" width="33"
-                height="32" alt="Поставляется в подарочной упаковке">
+              <svg class="about__us-icon-gift" width="33" height="32">
+                <use xlink:href="img/sprite.svg#icon-gift" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+              </svg>
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
             </li>
           </ul>
@@ -277,7 +285,7 @@
       <div class="footer__copyright">
         <b class="footer__copyright-text">Разработано</b>
         <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
+          <svg class="footer__academy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27" height="34">
             <path fill="#63d1bb"
               d="M30.2 5H30L10.3 7.1v36.2L30 55l19.7-11.7V7.1L30.2 5zm17 36.8L30 52 12.8 41.8V27l17.1 10.2V39l-11.7-7v1.8L30 40.9v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8L29.9 12.8 12.8 23V9.4L30 7.6l17.2 1.8V23z" />
             </svg>
