fixes map for mobile and tablet width

--- a/source/index.html
+++ b/source/index.html
@@ -213,7 +213,7 @@
               <button class="reviews__btn-next" type="button" aria-label="Следующий слайд">Следующий</button>
             </div>
           </div>
-          <form action="mailto:info@mimimishkashop.ru">
+          <form class="reviews__write-form" action="mailto:info@mimimishkashop.ru">
             <button type="submit" class="reviews__write-btn button">Написать</button>
           </form>
         </div>
@@ -224,19 +224,21 @@
     <section class="contacts">
       <div class="contacts__inner">
         <div class="contacts__wrapper">
-          <h2 class="contacts__title title">Контакты</h2>
-          <div class="contacts__info">
-            <div class="contacts__email">
-              <p class="contacts__value">e-mail:</p>
-              <a href="mailto:info@mimimishkashop.ru"
-                class="contacts__field contacts__field--line">info@mimimishkashop.ru</a>
-            </div>
-            <div class="contacts__address">
-              <p class="contacts__value">адрес:</p>
-              <div class="contacts__field">
-                <p class="contacts__city">г. Санкт-Петербург,</p>
-                <p class="contacts__street">ул. Большая Конюшенная,</p>
-                <p class="contacts__street">д. 19/8, офис 101</p>
+          <div class="ll">
+            <h2 class="contacts__title title">Контакты</h2>
+            <div class="contacts__info">
+              <div class="contacts__email">
+                <p class="contacts__value">e-mail:</p>
+                <a href="mailto:info@mimimishkashop.ru"
+                  class="contacts__field contacts__field--line">info@mimimishkashop.ru</a>
+              </div>
+              <div class="contacts__address">
+                <p class="contacts__value">адрес:</p>
+                <div class="contacts__field">
+                  <p class="contacts__city">г. Санкт-Петербург,</p>
+                  <p class="contacts__street">ул. Большая Конюшенная,</p>
+                  <p class="contacts__street">д. 19/8, офис 101</p>
+                </div>
               </div>
             </div>
           </div>
