fixes picturefill.js and add currentColor for sprite.svg

--- a/source/index.html
+++ b/source/index.html
@@ -152,37 +152,37 @@
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
             <li class="about-us__item about-us__item--eco">
-              <svg class="about__us-icon-flower" width="32" height="37">
+              <svg class="about__us-icon about__us-icon--flower" width="32" height="37">
                 <use xlink:href="img/sprite.svg#icon-flower" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item about-us__item--scandinavian">
-              <svg class="about__us-icon-money" width="47" height="27">
+              <svg class="about__us-icon about__us-icon--money" width="47" height="27">
                 <use xlink:href="img/sprite.svg#icon-money" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item about-us__item--likes">
-              <svg class="about__us-icon-heart" width="34" height="27">
+              <svg class="about__us-icon about__us-icon--heart" width="34" height="27">
                 <use xlink:href="img/sprite.svg#icon-heart" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item about-us__item--love">
-              <svg class="about__us-icon-ball" width="35" height="34">
+              <svg class="about__us-icon about__us-icon--ball" width="35" height="34">
                 <use xlink:href="img/sprite.svg#icon-ball" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item about-us__item--support">
-              <svg class="about__us-icon-rocket" width="55" height="23">
+              <svg class="about__us-icon about__us-icon--rocket" width="55" height="23">
                 <use xlink:href="img/sprite.svg#icon-rocket" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item about-us__item--present">
-              <svg class="about__us-icon-gift" width="33" height="32">
+              <svg class="about__us-icon about__us-icon--gift" width="33" height="32">
                 <use xlink:href="img/sprite.svg#icon-gift" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
@@ -322,7 +322,7 @@
   <script src="js/modal.js"></script>
   <script src="js/map.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
-  <script src="picturefill.js" async></script>
+  <script src="js/picturefill.js"></script>
 
 </body>
 
