--- a/source/catalog.html
+++ b/source/catalog.html
@@ -248,7 +248,7 @@
   <!-- Скрипты -->
   <script src="js/menu.js"></script>
   <script src="js/modal.js"></script>
-  <script src="picturefill.js" async></script>
+  <script src="js/picturefill.js"></script>
 
 </body>
 
