--- a/source/form.html
+++ b/source/form.html
@@ -214,7 +214,7 @@
 
   <!-- Скрипты -->
   <script src="js/menu.js"></script>
-  <script src="picturefill.js" async></script>
+  <script src="js/picturefill.js"></script>
 
 </body>
 
