--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
         </ul>
         <ul class="menu__list menu__list--search">
           <li class="menu__item search">
-            <a class="menu__link search__link" href="#">Поиск по сайту</a>
+            <a class="menu__link search__link" href="#"><span class="search__link-dn">Поиск по сайту</span></a>
           </li>
           <li class="menu__item">
             <a class="menu__link menu__link--basket" href="#">Корзина: пока пуста</a>
@@ -224,7 +224,7 @@
     <section class="contacts">
       <div class="contacts__inner">
         <div class="contacts__wrapper">
-          <div class="ll">
+          <div class="contacts__inner-content">
             <h2 class="contacts__title title">Контакты</h2>
             <div class="contacts__info">
               <div class="contacts__email">
