creates svg-icon.scss, fixes currentColor, changes class names in about-us and search blocks

--- a/source/index.html
+++ b/source/index.html
@@ -39,7 +39,7 @@
         </ul>
         <ul class="menu__list menu__list--search">
           <li class="menu__item search">
-            <a class="menu__link search__link" href="#"><span class="search__link-dn">Поиск по сайту</span></a>
+            <a class="menu__link search__link" href="#"><span class="search__link-display-none">Поиск по сайту</span></a>
           </li>
           <li class="menu__item">
             <a class="menu__link menu__link--basket" href="#">Корзина: пока пуста</a>
@@ -152,37 +152,37 @@
           <h2 class="about-us__title title">Коротко о нас:</h2>
           <ul class="about-us__list">
             <li class="about-us__item about-us__item--eco">
-              <svg class="about__us-icon about__us-icon--flower" width="32" height="37">
+              <svg class="svg-icon svg-icon--flower" width="32" height="37">
                 <use xlink:href="img/sprite.svg#icon-flower" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Экологически чистые материалы</p>
             </li>
             <li class="about-us__item about-us__item--scandinavian">
-              <svg class="about__us-icon about__us-icon--money" width="47" height="27">
+              <svg class="svg-icon svg-icon--money" width="47" height="27">
                 <use xlink:href="img/sprite.svg#icon-money" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Скандинавский стиль по российской цене</p>
             </li>
             <li class="about-us__item about-us__item--likes">
-              <svg class="about__us-icon about__us-icon--heart" width="34" height="27">
+              <svg class="svg-icon svg-icon--heart" width="34" height="27">
                 <use xlink:href="img/sprite.svg#icon-heart" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Увеличивает лайки на фотографиях</p>
             </li>
             <li class="about-us__item about-us__item--love">
-              <svg class="about__us-icon about__us-icon--ball" width="35" height="34">
+              <svg class="svg-icon svg-icon--ball" width="35" height="34">
                 <use xlink:href="img/sprite.svg#icon-ball" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Связано вручную с любовью и умилением</p>
             </li>
             <li class="about-us__item about-us__item--support">
-              <svg class="about__us-icon about__us-icon--rocket" width="55" height="23">
+              <svg class="svg-icon svg-icon--rocket" width="55" height="23">
                 <use xlink:href="img/sprite.svg#icon-rocket" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Поддержка отечественного производителя</p>
             </li>
             <li class="about-us__item about-us__item--present">
-              <svg class="about__us-icon about__us-icon--gift" width="33" height="32">
+              <svg class="svg-icon svg-icon--gift" width="33" height="32">
                 <use xlink:href="img/sprite.svg#icon-gift" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
               </svg>
               <p class="about-us__text">Поставляется в подарочной упаковке</p>
